improvements from findbugs
git-svn-id: file:///home/SUBVERSION/jas/trunk@5310 eafcb37d-f50b-0410-b8f7-d4cb9effa109